[project]
name = "siglip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "fiftyone>=1.10.0",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "open-clip-torch>=3.2.0",
    "pillow>=12.0.0",
    "seaborn>=0.13.2",
    "termcolor>=3.2.0",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
